@@ -56,6 +56,8 @@ if (isset($id) && $a_maps[$id]) {
 	$pconfig['mac'] = $a_maps[$id]['mac'];
 	$pconfig['ipaddr'] = $a_maps[$id]['ipaddr'];
 	$pconfig['descr'] = $a_maps[$id]['descr'];
+	$pconfig['nextserver'] = $a_maps[$id]['next-server'];
+	$pconfig['filename'] = $a_maps[$id]['filename'];
 } else {
 	$pconfig['mac'] = $_GET['mac'];
 }
@@ -78,6 +80,9 @@ if ($_POST) {
 	}
 	if (($_POST['mac'] && !is_macaddr($_POST['mac']))) {
 		$input_errors[] = "A valid MAC address must be specified.";
+	}
+	if ($_POST['nextserver'] && !is_ipaddr($_POST['nextserver'])) {
+		$input_errors[] = "A valid next server IP address must be specified.";
 	}
 
 	/* check for overlaps */
@@ -113,6 +118,8 @@ if ($_POST) {
 		$mapent['mac'] = $_POST['mac'];
 		$mapent['ipaddr'] = $_POST['ipaddr'];
 		$mapent['descr'] = $_POST['descr'];
+		$mapent['next-server'] = $_POST['nextserver'];
+		$mapent['filename'] = $_POST['filename'];
 
 		if (isset($id) && $a_maps[$id])
 			$a_maps[$id] = $mapent;
@@ -132,6 +139,9 @@ if ($_POST) {
 <?php if ($input_errors) print_input_errors($input_errors); ?>
             <form action="services_dhcp_edit.php" method="post" name="iform" id="iform">
               <table width="100%" border="0" cellpadding="6" cellspacing="0" summary="content pane">
+                <tr> 
+                  <td colspan="2" valign="top" class="listtopic">General configuration</td>
+                </tr>
                 <tr> 
                   <td width="22%" valign="top" class="vncellreq">MAC address</td>
                   <td width="78%" class="vtable"> 
@@ -154,6 +164,30 @@ if ($_POST) {
                     <br> <span class="vexpl">You may enter a description here 
                     for your reference (not parsed).</span></td>
                 </tr>
+                <tr> 
+                  <td colspan="2" valign="top" height="16"></td>
+                </tr>
+                <tr> 
+                  <td colspan="2" valign="top" class="listtopic">PXE configuration</td>
+                </tr>
+				<tr>
+				  <td width="22%" valign="top" class="vncell">&nbsp;</td>
+  				  <td width="78%" class="vtable"> 
+				    These settings are usually only needed with PXE booting and for some VoIP phones.  They can usually
+				    be left empty.  These settings (if provided) will override any values specified for the whole pool.</td>
+				</tr>
+				<tr>
+				  <td width="22%" valign="top" class="vncell">Next server</td>
+  				  <td width="78%" class="vtable"> 
+				    <input name="nextserver" type="text" class="formfld" id="nextserver" size="20" value="<?=htmlspecialchars($pconfig['nextserver']);?>"><br>
+				    Specify the server from which clients should load the boot file.</td>
+				</tr>
+				<tr>
+				  <td width="22%" valign="top" class="vncell">Filename</td>
+				  <td width="78%" class="vtable"> 
+				    <input name="filename" type="text" class="formfld" id="filename" size="20" value="<?=htmlspecialchars($pconfig['filename']);?>"><br>
+				    Specify the name of the boot file on the server above.</td>
+				</tr>
                 <tr> 
                   <td width="22%" valign="top">&nbsp;</td>
                   <td width="78%"> 
